--- a/README
+++ b/README
@@ -25,7 +25,7 @@ Run the application and copy a URL to the clipboard. Then, press Option-Shift-Sp
 
 URL Shrinkers
 -------------
-There are three shrinkers in the system right now:
+There are six shrinkers in the system right now:
 
 1. Loopback - This is mainly for debugging, it simply returns the URL you submitted
 2. TinyURL.com
@@ -36,7 +36,7 @@ There are three shrinkers in the system right now:
 
 Writing a URL Shrinker
 ----------------------
-You need to write three methods in your URL shrinker:
+You need to write two methods in your URL shrinker:
 
 -(void)performShrinkOnURL:(NSURL *)url;
 This performs the guts of the shrink. You can schedule asynchronous operations to run, such as NSURLRequests. Whenever the URL is retrieved (which doesn't have to be in this method), you must call doneShrinking:, supplying either the shrunken URL or nil if there was an error.
