--- a/README
+++ b/README
@@ -1,65 +1,3 @@
-URL Shrink
-----------
-URL Shrink is an OS X tool for converting URLs to shorter permalinks on various web services. It was designed to make it extremely easy to write a bit of code to integrate with other web services, including private URL services. Users can also specify their preferred service which is saved as a default.
+This fork of URL-shrink is no longer being maintained.
 
-License
--------
-URL Shrink is licensed under the BSD license, and its adoption within Mac and iPhone applications is encouraged.
-
-To-do
---------
-- Automatic downtime detection and re-routing
-- Expansion for newly added shrinkers (goog.gl,bit.ly etc.)
-- More abstraction for service-specific options (tracking, username, host preference etc.)
-
-Installation
-------------
-Grab the source code from GitHub. After you clone, be sure to check out submodules. Compile the application and run.
-
-Use
----
-Run the application and copy a URL to the clipboard. Then, press Option-Shift-Space (hardwired for now). It will convert the URL to a shrunken URL in the background and replace it. That's all it can do for now.
-
-URL Shrinkers
--------------
-
-* Loopback - This is mainly for debugging, it simply returns the URL you submitted
-* TinyURL.com
-* is.gd
-* bit.ly (requires API key and login)
-* digg.com
-* idek.net
-* goo.gl (requires API key for production apps)
-* ndurl.com
-* tinyarro.ws (specify preferred host in class file #define)
-
-Writing a URL Shrinker
-----------------------
-You need to write two methods in your URL shrinker:
-
--(void)performShrinkOnURL:(NSURL *)url;
-This performs the guts of the shrink. You can schedule asynchronous operations to run, such as NSURLRequests. Whenever the URL is retrieved (which doesn't have to be in this method), you must call doneShrinking:, supplying either the shrunken URL or nil if there was an error.
-
-+(NSString *)name;
-Must return a human-readable and unique name for your URL shrinker.
-
-Note: Developers no longer need to implement the +load method in subclasses of the URL Shrinker base-class.
-
-Optional: if you require an apiKey or login implement the following - 
-
-+(BOOL)requiresAPIKey;
-return YES if shortener requires key.
-+(BOOL)requiresLogin;
-return YES if shortener requires login.
-
-- (id)initWithLogin:(id)newLogin apiKey:(id)newKey;
-Init shrinker with login and apikey. 
-
-- (id)initWithApiKey:(id)newKey;
-Init shrinker with api key only (no login required)
-
-Or, if you prefer to hard-code any login/apikey information in your class files, you can use
-+ (id)login;
-+ (id)apiKey;
-
-Both of these are used in the default init of a USURLShrinker. If you use the init's mentioned above, they will override any class method login/apiKey information.
+I am starting my own project called (CNURLShrinky)[https://github.com/chiefy/CNURLShrinky] which will hopefully implement a lot of the functionality of url-shrink as a Framework / Static Lib for Mac OSX 10.6+ and iOS 4.0+. Let me know if you have feature requests.
